event view on home index fixed

--- a/EduHomeUI/Areas/EHMasterPanel/Views/Blog/Index.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Blog/Index.cshtml
@@ -32,7 +32,7 @@
                                     {
                                         <tr>
                                             <td>@count</td>
-                                            <td><img src="@blog.ImagePath" style="width:100px" /></td>
+                                            <td><img src="/@blog.ImagePath" style="width:100px" /></td>
                                             <td>@blog.Title</td>
                                             <td>@blog.AuthorName</td>
                                             <td>@blog.CommentCount</td>
