--- a/EduHomeUI/Views/About/Index.cshtml
+++ b/EduHomeUI/Views/About/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using EduHomeUI.ViewModels.AboutViewModels;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@model AboutIndexViewModel
+@model AboutCompositeViewModel
 <!-- Banner Area Start -->
 <div class="banner-area-wrapper">
     <div class="banner-area text-center">
@@ -51,7 +51,7 @@
             </div>
         </div>
         <div class="row">
-            @foreach (var teacher in Model.Teachers.OrderByDescending(t => t.DateCreated).Take(4))
+            @foreach (var teacher in Model.AboutIndex.Teachers.OrderByDescending(t => t.DateCreated).Take(4))
             {
                 @if (!teacher.IsDeleted)
                 {
@@ -124,10 +124,10 @@
                     <div class="notice-left">
                         @{
                             int index = 0;
-                            int noticeCount = Model.Notices.Count();
+                            int noticeCount = Model.AboutIndex.Notices.Count();
                         }
 
-                        @foreach (var notice in Model.Notices.OrderByDescending(n=>n.DateCreated).Take(6))
+                        @foreach (var notice in Model.AboutIndex.Notices.OrderByDescending(n=>n.DateCreated).Take(6))
                         {
                             string divClass = "single-notice-left";
 
@@ -160,33 +160,5 @@
 </section>
 <!-- Notice End -->
 <!-- Subscribe Start -->
-<div class="subscribe-area pt-60 pb-70">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8 offset-lg-2">
-                <div class="subscribe-content section-title text-center">
-                    <h2>subscribe our newsletter</h2>
-                    <p>I must explain to you how all this mistaken idea </p>
-                </div>
-                <div class="newsletter-form mc_embed_signup">
-                    <form action="https://devitems.us11.list-manage.com/subscribe/post?u=6bbb9b6f5827bd842d9640c82&amp;id=05d85f18ef" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                        <div id="mc_embed_signup_scroll" class="mc-form">
-                            <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Enter your e-mail address" required>
-                            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                            <div class="mc-news" aria-hidden="true"><input type="text" name="b_6bbb9b6f5827bd842d9640c82_05d85f18ef" tabindex="-1" value=""></div>
-                            <button id="mc-embedded-subscribe" class="default-btn" type="submit" name="subscribe"><span>subscribe</span></button>
-                        </div>
-                    </form>
-                    <!-- mailchimp-alerts Start -->
-                    <div class="mailchimp-alerts">
-                        <div class="mailchimp-submitting"></div><!-- mailchimp-submitting end -->
-                        <div class="mailchimp-success"></div><!-- mailchimp-success end -->
-                        <div class="mailchimp-error"></div><!-- mailchimp-error end -->
-                    </div>
-                    <!-- mailchimp-alerts end -->
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+@await Html.PartialAsync("_SubscribeSection", Model.SubscriberCreate)
 <!-- Subscribe End -->
