--- a/EduHomeUI/Views/Teacher/Index.cshtml
+++ b/EduHomeUI/Views/Teacher/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using EduHomeUI.ViewModels.TeacherViewModels;
-@model TeacherIndexViewModel    
+@model TeacherCompositeViewModel    
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 <!-- Banner Area Start -->
 <div class="banner-area-wrapper">
@@ -22,7 +22,7 @@
 <div class="teacher-area pt-150 pb-105">
     <div class="container">
         <div class="row">
-            @foreach (var teacher in Model.Teachers)
+            @foreach (var teacher in Model.TeacherIndex.Teachers)
             {
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="single-teacher mb-45">
@@ -46,3 +46,4 @@
     </div>
 </div>
 <!-- Teacher End -->
+@await Html.PartialAsync("_SubscribeSection", Model.SubscriberCreate)
