--- a/EduHomeUI/Views/Blog/Index.cshtml
+++ b/EduHomeUI/Views/Blog/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using EduHomeUI.ViewModels.BlogViewModels;
-@model BlogIndexViewModel
+@model BlogCompositeViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 <!-- Banner Area Start -->
 <div class="banner-area-wrapper">
@@ -22,7 +22,7 @@
 <div class="blog-area pt-150 pb-150">
     <div class="container">
         <div class="row">
-            @foreach (var blog in Model.Blogs)
+            @foreach (var blog in Model.BlogIndex.Blogs)
             {
                 <div class="col-lg-4 col-md-6">
                     <div class="single-blog mb-60">
@@ -59,3 +59,4 @@
     </div>
 </div>
 <!-- Blog End -->
+@await Html.PartialAsync("_SubscribeSection", Model.SubscriberCreate)
