--- a/EduHomeUI/Areas/EHMasterPanel/Views/Shared/_AdminLayout.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Shared/_AdminLayout.cshtml
@@ -449,10 +449,9 @@
                                 <li><a asp-controller="Blog" asp-action="Index">Blogs</a></li>
                                 <li><a asp-controller="Setting" asp-action="Index">Settings</a></li>
                                 <li><a asp-controller="Slider" asp-action="Index">Sliders</a></li>
+                                <li><a asp-controller="Subscribers" asp-action="Index">Subscribers</a></li>
                             </ul>
                         </li>
-
-                     
                     </ul>
                 </div>
             </div>
@@ -462,7 +461,6 @@
         <!-- Start right Content here -->
         <!-- ============================================================== -->
         <div class="main-content">
-
             <div class="page-content">
                 <div class="row">
                     <div class="card">
