--- a/EduHomeUI/Views/Shared/_Notification.cshtml
+++ b/EduHomeUI/Views/Shared/_Notification.cshtml
@@ -12,7 +12,7 @@
 	<script src="~/adminAssets/libs/jquery/jquery.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"> </script>
 	<script type="text/javascript">
-		toastr.success('@TempData["Error"]');
+		toastr.error('@TempData["Error"]');
 	</script>
 
 }
