--- a/EduHomeUI/Views/Auth/Register.cshtml
+++ b/EduHomeUI/Views/Auth/Register.cshtml
@@ -54,7 +54,7 @@
                                     <input asp-for="ConfirmPassword" type="password" class="form-control" />
                                     <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
                                 </div>
-                                <input asp-for="Token" />
+                            @*    <input asp-for="Token" />*@
                                 <div class="form-group">
                                     <div class="login-toggle-btn">
                                         <input type="checkbox" id="remember">
