my profile page added

--- a/EduHomeUI/Views/Shared/Components/Header/Default.cshtml
+++ b/EduHomeUI/Views/Shared/Components/Header/Default.cshtml
@@ -19,8 +19,8 @@
 									{
 										<li><a asp-area="EHMasterPanel" asp-controller="Dashboard" asp-action="Index">Admin Dashboard</a></li>
 									}
-									<li><a asp-controller="Auth">My account</a></li>
-									<li><a asp-controller="Auth" asp-controller="Auth" asp-action="Logout">Logout</a></li>
+									<li><a asp-controller="MyProfile" asp-action="Index">My account</a></li>
+									<li><a asp-controller="Auth" asp-action="Logout">Logout</a></li>
 								}
 								else
 								{
