name color fixed

--- a/EduHomeUI/Views/MyProfile/Index.cshtml
+++ b/EduHomeUI/Views/MyProfile/Index.cshtml
@@ -1,6 +1,5 @@
-﻿@using EduHomeUI.ViewModels.ProfileViewModels
+﻿@using EduHomeUI.ViewModels.ProfileViewModels;
 @model MyProfileViewModel
-
 @if (User.Identity.IsAuthenticated)
 {
     <section class="vh-100" style="background-color: #f4f5f7;">
@@ -9,7 +8,7 @@
                 <div class="col col-lg-6 mb-4 mb-lg-0">
                     <div class="card mb-3" style="border-radius: .5rem;">
                         <div class="row g-0">
-                            <div class="col-md-4 gradient-custom text-center text-white"
+                            <div class="col-md-4 gradient-custom text-center text-black"
                                  style="border-top-left-radius: .5rem; border-bottom-left-radius: .5rem;">
                                 <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava1-bg.webp"
                                      alt="Avatar" class="img-fluid my-5" style="width: 80px;" />
@@ -27,7 +26,7 @@
                                             <p class="text-muted">@Model.Email</p>
                                         </div>
                                         <div class="col-6 mb-3">
-                                            <h6>Date of Birth</h6>
+                                            <h6>DOB</h6>
                                             <p class="text-muted">@Model.DateOfBirth.ToString("dd,MMMM,yyyy")</p>
                                         </div>
                                     </div>
@@ -36,11 +35,11 @@
                                     <div class="row pt-1">
                                         <div class="col-6 mb-3">
                                             <h6>Recent</h6>
-                                            <p class="text-muted">@Model.FirstName</p>
+                                            <p class="text-muted">Lorem ipsum</p>
                                         </div>
                                         <div class="col-6 mb-3">
                                             <h6>Most Viewed</h6>
-                                            <p class="text-muted">@Model.LastName</p>
+                                            <p class="text-muted">Dolor sit amet</p>
                                         </div>
                                     </div>
                                 </div>
