--- a/EduHomeUI/Views/Shared/Components/Header/Default.cshtml
+++ b/EduHomeUI/Views/Shared/Components/Header/Default.cshtml
@@ -66,6 +66,7 @@
 										</li>
 										<li><a asp-controller="Contact" asp-action="Index">Contact</a></li>
 										<li><a href="contact.html">Buy Now</a>
+										<li><a asp-controller="Checkout" asp-action="Index">Checkout</a>
 									</ul>
 								</nav>
 							</div>
