--- a/EduHomeUI/Views/Shared/Components/Header/Default.cshtml
+++ b/EduHomeUI/Views/Shared/Components/Header/Default.cshtml
@@ -65,7 +65,7 @@
 											<a asp-controller="Blog" asp-action="Index">blog</a>
 										</li>
 										<li><a asp-controller="Contact" asp-action="Index">Contact</a></li>
-										<li><a href="contact.html">Buy Now</a>
+										<li><a asp-controller="BuyNow" asp-action="Index">Buy Now</a>
 										<li><a asp-controller="Checkout" asp-action="Index">Checkout</a>
 									</ul>
 								</nav>
