--- a/EduHomeUI/Views/Shared/_Layout.cshtml
+++ b/EduHomeUI/Views/Shared/_Layout.cshtml
@@ -24,6 +24,8 @@
 	<script src="/assets/js/jquery.nicescroll.min.js"></script>
 	<script src="/assets/js/plugins.js"></script>
 	<script src="/assets/js/main.js"></script>
+	<script src="~/jquery.dataTables.js"></script>
+	<script src="/jquery.dataTables.min.js"></script>
 
 	@RenderSection("Script", false)
 </body>
